{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 251,
  "lineage": "28602843-a0be-abff-0cfc-e55cebd9fa26",
  "resources": [
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a89f8907c1bc76fc",
            "arn": "arn:aws:ec2:eu-west-3:767397659707:elastic-ip/eipalloc-0a89f8907c1bc76fc",
            "associate_with_private_ip": "subnet-08b28e23d0ec4fde7",
            "domain": "vpc",
            "id": "eipalloc-0a89f8907c1bc76fc",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-15-188-203-214.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.203.214",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ElasticIPAddress1"
            },
            "tags_all": {
              "Name": "ElasticIPAddress1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.subnets.aws_subnet.public_subnet1",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089b617dd8292bf71",
            "arn": "arn:aws:ec2:eu-west-3:767397659707:elastic-ip/eipalloc-089b617dd8292bf71",
            "associate_with_private_ip": "subnet-08ad8e02df8e73771",
            "domain": "vpc",
            "id": "eipalloc-089b617dd8292bf71",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-13-39-70-112.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.39.70.112",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ElasticIPAddress2"
            },
            "tags_all": {
              "Name": "ElasticIPAddress2"
            },
            "vpc": true
          },
          "dependencies": [
            "module.subnets.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a89f8907c1bc76fc",
            "association_id": "eipassoc-0760fb725854961a8",
            "connectivity_type": "public",
            "id": "nat-0024e3d093403f23d",
            "network_interface_id": "eni-0c1d7f18acda316d8",
            "private_ip": "10.0.0.142",
            "public_ip": "15.188.203.214",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08b28e23d0ec4fde7",
            "tags": {
              "Name": "NATGateway1"
            },
            "tags_all": {
              "Name": "NATGateway1"
            }
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.eip1",
            "module.subnets.aws_subnet.public_subnet1",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089b617dd8292bf71",
            "association_id": "eipassoc-09d6977cd720e0ccd",
            "connectivity_type": "public",
            "id": "nat-00bf4db85acf875cc",
            "network_interface_id": "eni-0acd201dbc9b8331d",
            "private_ip": "10.0.1.81",
            "public_ip": "13.39.70.112",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08ad8e02df8e73771",
            "tags": {
              "Name": "NATGateway2"
            },
            "tags_all": {
              "Name": "NATGateway2"
            }
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.eip2",
            "module.subnets.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-074459c422d51fed51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0024e3d093403f23d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-074459c422d51fed5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.eip1",
            "module.nat_gateway.aws_nat_gateway.nat_gw1",
            "module.route_tables.aws_route_table.private_rt1",
            "module.subnets.aws_subnet.public_subnet1",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d25d42bd0acb11a11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00bf4db85acf875cc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d25d42bd0acb11a1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.eip2",
            "module.nat_gateway.aws_nat_gateway.nat_gw2",
            "module.route_tables.aws_route_table.private_rt2",
            "module.subnets.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-079afeb7d6e291442",
            "id": "r-rtb-0310b908380ed93a31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0310b908380ed93a3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.route_tables.aws_route_table.public_rt",
            "module.vpc.aws_internet_gateway.project_igw",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:route-table/rtb-074459c422d51fed5",
            "id": "rtb-074459c422d51fed5",
            "owner_id": "767397659707",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PrivateRouteTableAZ1"
            },
            "tags_all": {
              "Name": "PrivateRouteTableAZ1"
            },
            "timeouts": null,
            "vpc_id": "vpc-03121764dac2babdf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:route-table/rtb-0d25d42bd0acb11a1",
            "id": "rtb-0d25d42bd0acb11a1",
            "owner_id": "767397659707",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PrivateRouteTableAZ2"
            },
            "tags_all": {
              "Name": "PrivateRouteTableAZ2"
            },
            "timeouts": null,
            "vpc_id": "vpc-03121764dac2babdf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:route-table/rtb-0310b908380ed93a3",
            "id": "rtb-0310b908380ed93a3",
            "owner_id": "767397659707",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "Name": "PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-03121764dac2babdf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt1_assoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f7ea3ff3b6c9302",
            "route_table_id": "rtb-074459c422d51fed5",
            "subnet_id": "subnet-02f1d526c250f68ab"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.private_rt1",
            "module.subnets.aws_subnet.app_subnet1",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt1_assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f930947dbf9740c",
            "route_table_id": "rtb-074459c422d51fed5",
            "subnet_id": "subnet-0fccc27231cb41a38"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.private_rt1",
            "module.subnets.aws_subnet.db_subnet1",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt2_assoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00465909691525b48",
            "route_table_id": "rtb-0d25d42bd0acb11a1",
            "subnet_id": "subnet-0f6ee9347833193a4"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.private_rt2",
            "module.subnets.aws_subnet.app_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt2_assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0716f02e895532a6d",
            "route_table_id": "rtb-0d25d42bd0acb11a1",
            "subnet_id": "subnet-02f18b0c85acc9339"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.private_rt2",
            "module.subnets.aws_subnet.db_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010357aad7e83c2b7",
            "route_table_id": "rtb-0310b908380ed93a3",
            "subnet_id": "subnet-08b28e23d0ec4fde7"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.public_rt",
            "module.subnets.aws_subnet.public_subnet1",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059a869a72e17a44c",
            "route_table_id": "rtb-0310b908380ed93a3",
            "subnet_id": "subnet-08ad8e02df8e73771"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.public_rt",
            "module.subnets.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:security-group/sg-06564de6754152f36",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06564de6754152f36",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240614094022285700000003",
            "name_prefix": "terraform-",
            "owner_id": "767397659707",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AppInstanceSecurityGroup"
            },
            "tags_all": {
              "Name": "AppInstanceSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-03121764dac2babdf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:security-group/sg-0543d7ab0f38b5d6d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0543d7ab0f38b5d6d",
            "ingress": [],
            "name": "EFSMountTargetSecurityGroup",
            "name_prefix": "",
            "owner_id": "767397659707",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EFSMountTargetSecurityGroup"
            },
            "tags_all": {
              "Name": "EFSMountTargetSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-03121764dac2babdf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:security-group/sg-05ac1b3782ae4bc6a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ac1b3782ae4bc6a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "RDSSecurityGroup",
            "name_prefix": "",
            "owner_id": "767397659707",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDSSecurityGroup"
            },
            "tags_all": {
              "Name": "RDSSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-03121764dac2babdf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "efs_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-172191365",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0543d7ab0f38b5d6d",
            "security_group_rule_id": "sgr-04180e974eb669c7d",
            "self": false,
            "source_security_group_id": "sg-06564de6754152f36",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.app_sg",
            "module.security_groups.aws_security_group.efs_sg",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:network-acl/acl-08576f5fd95599ee8",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-08576f5fd95599ee8",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "767397659707",
            "subnet_ids": [],
            "tags": {
              "Name": "PrivateNetworkACL"
            },
            "tags_all": {
              "Name": "PrivateNetworkACL"
            },
            "vpc_id": "vpc-03121764dac2babdf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:network-acl/acl-0aa12f5d84cd7ea55",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "id": "acl-0aa12f5d84cd7ea55",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "767397659707",
            "subnet_ids": [],
            "tags": {
              "Name": "PublicNetworkACL"
            },
            "tags_all": {
              "Name": "PublicNetworkACL"
            },
            "vpc_id": "vpc-03121764dac2babdf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "private_acl_app_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0f22ac9513d920706",
            "network_acl_id": "acl-08576f5fd95599ee8",
            "subnet_id": "subnet-02f1d526c250f68ab"
          },
          "dependencies": [
            "module.subnets.aws_network_acl.private_acl",
            "module.subnets.aws_subnet.app_subnet1",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "private_acl_app_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-08a731d4095d31350",
            "network_acl_id": "acl-08576f5fd95599ee8",
            "subnet_id": "subnet-0f6ee9347833193a4"
          },
          "dependencies": [
            "module.subnets.aws_network_acl.private_acl",
            "module.subnets.aws_subnet.app_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "private_acl_db_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-09252d4c6330f7ed6",
            "network_acl_id": "acl-08576f5fd95599ee8",
            "subnet_id": "subnet-0fccc27231cb41a38"
          },
          "dependencies": [
            "module.subnets.aws_network_acl.private_acl",
            "module.subnets.aws_subnet.db_subnet1",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "private_acl_db_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-03d2a2994154e2572",
            "network_acl_id": "acl-08576f5fd95599ee8",
            "subnet_id": "subnet-02f18b0c85acc9339"
          },
          "dependencies": [
            "module.subnets.aws_network_acl.private_acl",
            "module.subnets.aws_subnet.db_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public_acl_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0d661624b7f99e499",
            "network_acl_id": "acl-0aa12f5d84cd7ea55",
            "subnet_id": "subnet-08b28e23d0ec4fde7"
          },
          "dependencies": [
            "module.subnets.aws_network_acl.public_acl",
            "module.subnets.aws_subnet.public_subnet1",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public_acl_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0772cb6bfa42221ab",
            "network_acl_id": "acl-0aa12f5d84cd7ea55",
            "subnet_id": "subnet-08ad8e02df8e73771"
          },
          "dependencies": [
            "module.subnets.aws_network_acl.public_acl",
            "module.subnets.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3478729365",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08576f5fd95599ee8",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.private_acl",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3425195321",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-08576f5fd95599ee8",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.private_acl",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3987760436",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0aa12f5d84cd7ea55",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.public_acl",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1843080976",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0aa12f5d84cd7ea55",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.public_acl",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:subnet/subnet-02f1d526c250f68ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f1d526c250f68ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397659707",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AppSubnet1"
            },
            "tags_all": {
              "Name": "AppSubnet1"
            },
            "vpc_id": "vpc-03121764dac2babdf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:subnet/subnet-0f6ee9347833193a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6ee9347833193a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397659707",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AppSubnet2"
            },
            "tags_all": {
              "Name": "AppSubnet2"
            },
            "vpc_id": "vpc-03121764dac2babdf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:subnet/subnet-0fccc27231cb41a38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fccc27231cb41a38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397659707",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DatabaseSubnet1"
            },
            "tags_all": {
              "Name": "DatabaseSubnet1"
            },
            "vpc_id": "vpc-03121764dac2babdf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:subnet/subnet-02f18b0c85acc9339",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f18b0c85acc9339",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397659707",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DatabaseSubnet2"
            },
            "tags_all": {
              "Name": "DatabaseSubnet2"
            },
            "vpc_id": "vpc-03121764dac2babdf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:subnet/subnet-08b28e23d0ec4fde7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b28e23d0ec4fde7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397659707",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet1"
            },
            "tags_all": {
              "Name": "PublicSubnet1"
            },
            "vpc_id": "vpc-03121764dac2babdf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:subnet/subnet-08ad8e02df8e73771",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ad8e02df8e73771",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397659707",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet2"
            },
            "tags_all": {
              "Name": "PublicSubnet2"
            },
            "vpc_id": "vpc-03121764dac2babdf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:internet-gateway/igw-079afeb7d6e291442",
            "id": "igw-079afeb7d6e291442",
            "owner_id": "767397659707",
            "tags": {
              "Name": "ProjectInternetGateway"
            },
            "tags_all": {
              "Name": "ProjectInternetGateway"
            },
            "vpc_id": "vpc-03121764dac2babdf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:767397659707:vpc/vpc-03121764dac2babdf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08ec0808006d5aea4",
            "default_route_table_id": "rtb-07b1db96c3d07781d",
            "default_security_group_id": "sg-0e1b2cffe1787891b",
            "dhcp_options_id": "dopt-0a7aa411500ccd0de",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03121764dac2babdf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b1db96c3d07781d",
            "owner_id": "767397659707",
            "tags": {
              "Name": "ProjectVPC"
            },
            "tags_all": {
              "Name": "ProjectVPC"
            }
          }
        }
      ]
    }
  ]
}